Fix: carousel horizontal scrollbar visual bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -919,7 +919,8 @@ section {
 /* CAROUSEL */
 
 .carousel {
-    max-width: 50%;    
+    max-height: 280px;  
+    max-width: 50%;  
     margin: 0 auto;
     text-align: center;
     padding: 0;
@@ -927,6 +928,7 @@ section {
 
 .carousel-item img {
     margin: 0 auto;
+    padding: 0;
     text-align: center;
     max-width: 280px;
     max-height: 280px;
@@ -934,10 +936,6 @@ section {
 
 .carousel span {
     color: black;
-}
-
-.carousel-inner {
-    overflow: visible;
 }
 
 .carousel-caption {
